# bulks

./: Cargo.toml  README.md
src/: _array.rs  array.rs  bulk.rs  bulkable_iterator.rs  collect_nearest.rs  double_ended_bulk.rs  from_bulk.rs  impl_array.rs  impl_iter.rs  impl_ndarray.rs  impl_option.rs  impl_range.rs  impl_slice.rs  impl_vec.rs  into_bulk.rs  into_inplace_bulk.rs  iter.rs  lib.rs  limit_into_bulk.rs  limit_to_bulk.rs  random_access_bulk.rs  split_bulk.rs  static_bulk.rs  temp.rs  try_from_bulk.rs
src/adapters/: array_chunks.rs  array_chunks_with_remainder.rs  chain.rs  cloned.rs  contained.rs  copied.rs  empty.rs  enumerate.rs  enumerate_from.rs  flat_map.rs  flatten.rs  infinite.rs  inspect.rs  intersperse.rs  intersperse_with.rs  map.rs  map_windows.rs  merge.rs  mod.rs  mutate.rs  once.rs  once_with.rs  repeat_n.rs  repeat_n_with.rs  resize.rs  resize_with.rs  rev.rs  skip.rs  step_by.rs  take.rs  transmute.rs  transpose.rs  zip.rs
src/range/: mod.rs  range.rs  range_inclusive.rs
src/util/: array_buffer.rs  bulk_length.rs  collect_length.rs  const_step.rs  guard.rs  infinite_iterator.rs  length.rs  mod.rs  mutator.rs  nearest.rs  remove_ref.rs  same.rs  stepper.rs  take_one.rs  yield_once.rs
