[package]
name = "bulks"
version = "0.8.3"
edition = "2024"
license = "MIT"
keywords = ["array", "util", "iterators", "collect", "iterate"]
categories = ["rust-patterns", "no-std::no-alloc"]
description = "Amazing bulks! They are like iterators, but in bulk, and therefore support collection into arrays."
repository = "https://github.com/sigurd4/bulks"

[features]
default = []
alloc = ["array_trait/alloc"]
ndarray = ["dep:ndarray"]

[dependencies]
moddef = "0.3.0"
currying = {version = "0.4.1", default-features = false, features = ["8", "rcurry"]}
array_trait = {version = "1.1.23", default-features = false, features = ["length"]}
ndarray = {version = "0.17.2", optional = true, default-features = false}
thiserror = "2.0.18"